# report-generator

./: .env  .gitignore  app.py  pyproject.toml  requirements.txt  sample_data.csv
modules/: __init__.py  chart_generator.py  data_processor.py  email_sender.py  pdf_generator.py  scraper.py
